--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h1{
     color: rgb(194, 35, 35);
+    
 }
 
 h3{
@@ -7,5 +8,5 @@ h3{
 }
 
 h1{
-    background-color: rgb(194, 6,45);
+    background-color: rgb(6, 194, 116);
 }
